# infr

./: .gitignore  README.md  pyproject.toml
configs/: tiny.json
scripts/: generate_weights.py  run_demo.py  verify_correctness.py
tests/: conftest.py  test_bench_smoke.py  test_kv_cache_equivalence.py  test_sampling.py  test_shapes.py
toy_infer/: __init__.py  config.py  tokenizer.py  weights.py
toy_infer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
toy_infer/bench/: __init__.py  bench_cli.py  metrics.py  microbench.py
toy_infer/model/: __init__.py  attention.py  layers.py  transformer.py
toy_infer/runtime/: __init__.py  engine.py  sampling.py  scheduler.py
