[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toy-infer"
version = "0.1.0"
description = "Toy transformer inference baseline for optimization exercises"
authors = [{name = "Demo", email = "demo@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "typer>=0.12",
    "rich>=13.7",
    "pytest>=7.4"
]

[project.urls]
homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-q"
python_files = "test_*.py"
